--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -143,3 +143,21 @@ html, body {
     margin-top: 10px;
     position: relative;
 }
+
+/* SIDE SCHEMES CONTAINER */
+.side-scheme-container-wrapper {
+    border: 3px solid #000000;
+    border-radius: 10px;
+    background-color: #2a17758c;
+    padding: 15px;           
+    display: inline-block;
+}
+
+.side-scheme-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 10px;
+    position: relative;
+}
